@@ -7,6 +7,7 @@ const transpiled = Builder
   .create()
   .build('../lib/asciidoctor/tabs/block.rb')
   .build('../lib/asciidoctor/tabs/docinfo.rb')
+  .build('../lib/asciidoctor/tabs/extensions.rb')
   .toString()
 
 fs.mkdirSync('dist', { recursive: true })
